# bzlx

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
bzlx/: main.cc
