load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "bzlx",
    srcs = glob([
        "bzlx/*.cc",
        "bzlx/*.hh",
    ]),
    copts = copts,
    deps = [
        "@boost//libs/process",
    ],
)
